--- a/src/app/table.component.html
+++ b/src/app/table.component.html
@@ -3,7 +3,7 @@
     [columnResizeMode]="fit">
     <ng-template pTemplate="header" let-columnies>
       <tr>
-        <th *ngFor="let col of columnies; index as columnIndex; last as isLast"
+        <th *ngFor="let col of columnies; index as columnIndex; last as isLast" pResizableColumn
           [pSortableColumn]="useSorting ? col.field : null">
           <div class="table-header">
             <ng-container *ngTemplateOutlet="headerTemplates[columnIndex] context:{$implicit: col}"></ng-container>
